--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,9 @@ td.file-download {
 	padding-left: 10px !important;
 	text-align: center;
 }
+
+.Header .container-lg.gh-container,
+.container.gh-container {
+	max-width: 1440px;
+	width: 1440px;
+}
