--- a/src/extension/options.scss
+++ b/src/extension/options.scss
@@ -13,18 +13,82 @@ body {
 
 .option {
 	background: #2e2b45;
-	border-left: 6px solid #006aff;
+	// border-left: 6px solid #006aff;
 	border-radius: 4px;
 	box-shadow: 0 7px 10px -10px #000000;
 	margin-bottom: 20px;
 	padding: 10px 5px;
 	transition: all 0.3s ease-in-out;
 
-	label {
-		color: #ffffff;
-	}
-
 	&.is-active {
 		background: linear-gradient(to right, #39306a, #793d7d 45%);
+	}
+}
+
+.control {
+	color: #ffffff;
+	cursor: pointer;
+	display: block;
+	font-size: 16px;
+	padding-left: 30px;
+	position: relative;
+
+	input {
+		opacity: 0;
+		position: absolute;
+		z-index: -1;
+	}
+
+	&:hover input ~ .checkbox,
+	& input:focus ~ .checkbox {
+		border-color: #ffffff;
+	}
+
+	& input:checked ~ .checkbox {
+		background-color: #006aff;
+	}
+
+	&:hover input:not([disabled]):checked ~ .checkbox,
+	& input:checked:focus ~ .checkbox {
+		background-color: #006aff;
+		border-color: transparent;
+	}
+
+	input:disabled ~ .checkbox {
+		background-color: #e6e6e6;
+		opacity: 0.6;
+		pointer-events: none;
+	}
+
+	& input:checked ~ .checkbox:after {
+		display: block;
+	}
+
+	& input:disabled ~ .checkbox:after {
+		border-color: #7b7b7b;
+	}
+
+	.checkbox {
+		border: 1px solid rgba(#ffffff, 0.3);
+		border-radius: 5px;
+		height: 20px;
+		left: 0;
+		position: absolute;
+		top: 2px;
+		transition: all 0.3s ease-in-out;
+		width: 20px;
+	
+		&:after {
+			border: solid #ffffff;
+			border-width: 0 2px 2px 0;
+			content: '';
+			display: none;
+			height: 8px;
+			left: 8px;
+			position: absolute;
+			top: 3px;
+			transform: rotate(45deg);
+			width: 3px;
+		}
 	}
 }
